<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/home_icon"

            />
        <item
            android:id="@+id/nav_search"
            android:title="@string/search"
            android:icon="@drawable/search_icon"/>
        <item
            android:id="@+id/nav_cate"
            android:title="@string/cate"
            android:icon="@drawable/category_icon"
            />
        <item
            android:id="@+id/nav_booking"
            android:title="Booking"

            android:icon="@drawable/ic_booking"

            />
        <item
            android:id="@+id/nav_dd_bot"
            android:title="@string/dd_bot"
            android:icon="@drawable/bot_icon"
            />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/user_icon"
            />
        <item
            android:id="@+id/nav_msg"
            android:title="@string/msg"
            android:icon="@drawable/msg_icon"
            />
        <item

            android:id="@+id/nav_logout"
            android:title="Logout"
            android:icon="@drawable/logout_icon"
            />

    </group>


<!--    <item android:title="Profile">-->
<!--        <menu>-->
<!--            -->

<!--        </menu>-->


<!--    </item>-->

    <item android:title="Categories Of Specialists">
        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_Cardiologist"
                    android:title="@string/cardiologist"
                    android:icon="@drawable/heart_icon"/>
                <item
                    android:id="@+id/nav_neurologist"
                    android:title="@string/neurologist"
                    android:icon="@drawable/brain_icon"/>
                <item
                    android:id="@+id/nav_dentist"
                    android:title="@string/destist"
                    android:icon="@drawable/dentist_icon"/>
                <item
                    android:id="@+id/nav_eye"
                    android:title="@string/eye"
                    android:icon="@drawable/eye_icon"/>

            </group>


        </menu>

    </item>


    <item android:title="Share">
        <menu>

            <group android:checkableBehavior="none">

                <item
                    android:id="@+id/nav_share"
                    android:title="@string/share"
                    android:icon="@drawable/share_icon"
                    />
                <item
                    android:id="@+id/nav_rate_us"
                    android:title="@string/rate_us"
                    android:icon="@drawable/rate_us_icon"
                    />


            </group>


        </menu>

    </item>


</menu>