<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Patient.AllCategories"
    android:background="@color/dark_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:id="@+id/back_pressed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/back_icon" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/search_icon" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Categories"
            android:textSize="30sp"
            android:padding="10dp"
            android:textAllCaps="true"
            android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/cate_1"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/neurologist"
                    android:textSize="30sp"
                    android:textColor="@color/dark_blue"
                    android:fontFamily="@font/baloo_regular"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:textColor="@color/dark_blue"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>



            </RelativeLayout>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/brain_svg"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/cate_2"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/destist"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/baloo_regular"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:textColor="@color/black"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>



            </RelativeLayout>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_dentist_svg"
                android:layout_marginTop="-10dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/cate_3"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eye"
                    android:textSize="25sp"
                    android:textColor="@color/dark_white"
                    android:fontFamily="@font/baloo_regular"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:textColor="@color/dark_white"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>



            </RelativeLayout>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_eye"
                android:layout_marginTop="-10dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/cate_4"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/organ"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/baloo_regular"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:textColor="@color/black"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>



            </RelativeLayout>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_organ"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/cate_5"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardiologist"
                    android:textSize="30sp"
                    android:textColor="@color/dark_white"
                    android:fontFamily="@font/baloo_regular"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:textColor="@color/dark_white"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>



            </RelativeLayout>
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_heart"
                android:layout_marginTop="-10dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/cate_3"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gyn"
                    android:textSize="30sp"
                    android:textColor="@color/dark_white"
                    android:fontFamily="@font/baloo_regular"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:textColor="@color/dark_white"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>



            </RelativeLayout>
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_gyn"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/cate_6"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/allergy"
                    android:textSize="30sp"
                    android:textColor="@color/dark_white"
                    android:fontFamily="@font/baloo_regular"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:textColor="@color/dark_white"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>



            </RelativeLayout>
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_allergy_svg"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/cate_7"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bone"
                    android:textSize="30sp"
                    android:textColor="@color/dark_white"
                    android:fontFamily="@font/baloo_regular"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:textColor="@color/dark_white"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>



            </RelativeLayout>
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_bone_svg"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

<!--        <RelativeLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="150dp"-->
<!--            android:layout_margin="20dp"-->
<!--            android:background="@drawable/cate_2">-->

<!--            <ImageView-->
<!--                android:layout_width="70dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:src="@drawable/heart_icon"-->
<!--                android:layout_marginLeft="20dp"/>-->
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/cardiologist"-->
<!--                android:textSize="30sp"-->
<!--                android:textColor="@color/dark_white"-->
<!--                android:layout_alignParentRight="true"-->
<!--                android:fontFamily="@font/baloo_regular"-->
<!--                android:padding="25dp"/>-->

<!--            <Button-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/expand_all"-->
<!--                android:background="#00000000"-->
<!--                android:padding="20dp"-->
<!--                android:textColor="@color/dark_white"-->
<!--                android:layout_alignParentRight="true"-->
<!--                android:layout_alignParentBottom="true"/>-->



<!--        </RelativeLayout>-->




    </LinearLayout>

</ScrollView>